--- a/package.json
+++ b/package.json
@@ -2,34 +2,23 @@
   "type": "module",
   "name": "usof-backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "openapi:version": "openapi-generator-cli version",
-    "openapi:gen:models": "openapi-generator-cli generate -i openapi/api-bundled.yaml -g typescript-fetch -o src/generated/openapi --global-property models,modelDocs=false,apiDocs=false,apis=false,supportingFiles=false",
-    "test": "vitest run",
-    "test:watch": "vitest"
-  },
-  "private": true,
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "description": "",
-  "dependencies": {
-    "express": "^5.1.0",
-    "js-yaml": "^4.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "process": "^0.11.10",
-    "supertest": "^7.1.4",
-    "uuid": "^13.0.0",
-    "winston": "^3.17.0"
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "tsc"
   },
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^2.23.3",
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^24.5.2",
+    "tsx": "^4.20.5",
+    "typescript": "^5.5.3"
+  },
+  "private": true,
+  "dependencies": {
+    "js-yaml": "^4.1.0",
     "knex": "^3.1.0",
     "mysql2": "^3.15.0",
-    "nodemon": "^3.1.10",
-    "vitest": "^3.2.4"
+    "uuid": "^13.0.0",
+    "winston": "^3.17.0"
   }
 }
