--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/js-yaml": "^4.0.9",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
     "tsx": "^4.20.5",
     "typescript": "^5.5.3"
   },
   "private": true,
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "mysql2": "^3.15.0",
     "uuid": "^13.0.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^4.1.11"
   }
 }
