--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.24.0",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
-    "tsx": "^4.20.5",
+    "tsx": "^4.20.6",
     "typescript": "^5.5.3"
   },
   "private": true,
