--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "type": "module",
   "name": "usof-backend",
   "version": "1.0.0",
   "description": "",
@@ -14,6 +13,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
+    "@types/uuid": "^10.0.0",
     "tsx": "^4.20.6",
     "typescript": "^5.5.3"
   },
@@ -24,10 +24,11 @@
     "class-validator": "^0.14.2",
     "express": "^5.1.0",
     "js-yaml": "^4.1.0",
+    "reflect-metadata": "^0.2.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "mysql2": "^3.15.0",
-    "uuid": "^13.0.0",
+    "uuid": "^8.3.2",
     "winston": "^3.17.0",
     "zod": "^4.1.11"
   }
