--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es2016",
     "module": "commonjs",
+    "moduleResolution": "node",
+    "target": "ESNext",
+    "rootDir": "src",
+    "outDir": "dist",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
     "strict": true,
-    "skipLibCheck": true,
-    "outDir": "dist"
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
+  "exclude": [
+    "node_modules"
+  ],
   "include": ["src"]
 }
