--- a/config.yaml
+++ b/config.yaml
@@ -10,8 +10,17 @@ jwt:
 
 database:
   sql:
-    host: "usof-mysql"
-    port: 3306
+#    host: "usof-mysql"
+#    port: 3306
+    host: "localhost"
+    port: 5678
     user: "usof"
     name: "usof"
     password: "password"
+
+aws:
+  region: "eu-north-1"
+#  access_key_id: "SECCRETACCESSKEYID"
+#  secret_access_key: "SECCRETACCESSKEY"
+  bucket_name: "usof-s3"
+  public_base: "https://usof-s3.s3.eu-north-1.amazonaws.com"
