--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/express": "^5.0.3",
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.5.2",
     "@types/uuid": "^10.0.0",
     "tsx": "^4.20.6",
@@ -19,15 +20,19 @@
   },
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.914.0",
+    "@aws-sdk/s3-presigned-post": "^3.914.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "js-yaml": "^4.1.0",
-    "reflect-metadata": "^0.2.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.0",
+    "reflect-metadata": "^0.2.2",
     "uuid": "^8.3.2",
     "winston": "^3.17.0",
     "zod": "^4.1.11"
